--- a/style.css
+++ b/style.css
@@ -1,49 +1,120 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
-body {
-    font-family: 'poppins';
+* {
     margin: 0;
-    margin-left: 10px;
     padding: 0;
-    background-color: rgb(202, 199, 199);
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
 }
 
-#mybutton {
-    margin-left: 10px;
-    font-size: 30px;
-    width: fit-content;
-    height: fit-content;
+body {
+    min-height: 100%;
+    background: #e3f2fd;
 }
 
-#sidebar {
+nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 70px;
+    width: 100%;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    gap: 35px;
-    border: black 3px solid;
-    width: 200px;
-    height: 100vh;
-    margin: 10px;
-    padding-top: 20px;
-    background-color:black;
-    font-weight: bold;
+    background: white;
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
 }
 
-a {
+nav .logo {
+    display: flex;
+    align-items: center;
+    margin: 0 24px;
+}
+
+.logo .menu-icon {
+    color: #333;
+    font-size: 24px;
+    margin-right: 14px;
+    cursor: pointer;
+}
+
+.logo .logo-name {
+    color: #333;
+    font-size: 22px;
+    font-weight: 500;
+}
+
+nav .sidebar {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    height: 100%;
+    width: 260px;
+    padding: 20px 0;
+    background-color: #fff;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    transition: all 0.4s ease;
+}
+
+nav.open .sidebar {
+    left: 0;
+}
+
+.sidebar .sidebar-content {
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 30px 16px;
+}
+
+.sidebar-content .list {
+    list-style: none;
+}
+
+.list .nav-link {
+    display: flex;
+    align-items: center;
+    margin: 8px 0;
     text-decoration: none;
-    font-size: 30px;
-    color: white;
-    opacity: .5;
+    padding: 14px 12px;
+    border-radius: 8px;
 }
 
-a:hover {
-    transition-delay: .2s;
-    background-color: rgb(132, 0, 255);
+.lists .nav-link:hover {
+    background-color: #4070f4;
+}
+
+.nav-link .icon {
+    margin-right: 14px;
+    font-size: 20px;
+    color: #707070;
+}
+
+.nav-link .link {
+    font-size: 16px;
+    color: #707070;
+    font-weight: 400;
+}
+
+.lists .nav-link:hover .icon,
+.lists .nav-link:hover .link {
+    color: #fff;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    height: 1000vh;
+    width: 200%;
+    background: rgba(0, 0, 0, 0.3);
+    transition: all 0.4s ease;
+    pointer-events: none;
+    opacity: 0;
+}
+
+nav.open ~ .overlay {
+    left: 260px;
     opacity: 1;
-    border-radius: 25px;
-    padding: 15px;
-}
-
-h1 {
-    padding-left: 30px;
+    pointer-events: auto;
 }
